@@ -55,15 +55,15 @@ if (empty($p['entity']) || empty($p['filter'])) exit;
 
 // determine table
 switch ($p['entity']) {
+        case 'sg':      $column = 'name1';
+                                $objecttype_id = 4;
+                                break;
 	case 'hg':	$column = 'name1';
 				$objecttype_id = 3;
 				break;
 	case 'h':	$column = 'name1';
 				$objecttype_id = 1;
 				break;
-        case 'sg':      $column = 'name1';
-                                $objecttype_id = 4;
-                                break;
 	case 's':	$column = 'name2';
 				$objecttype_id = 2;
 				break;
