@@ -3,9 +3,9 @@
 <tr class="header">
 <td nowrap="nowrap"><a href="{$LINK_SORT_NOTIFICATION_RULE}" class="header_link">{$OVERVIEW_HEADING_NOTIFICATION_RULE}</a>{$SORT_IMAGE_NOTIFICATION_RULE}</td>
 <td nowrap="nowrap">{$OVERVIEW_HEADING_ACTIONS}</td>
+<td nowrap="nowrap"><a href="{$LINK_SORT_SERVICEGROUPS}" class="header_link">{$OVERVIEW_HEADING_SERVICEGROUPS}</a>{$SORT_IMAGE_SERVICE}</td>
 <td nowrap="nowrap"><a href="{$LINK_SORT_HOSTGROUPS}" class="header_link">{$OVERVIEW_HEADING_HOSTGROUPS}</a>{$SORT_IMAGE_HOST}</td>
 <td nowrap="nowrap"><a href="{$LINK_SORT_HOST}" class="header_link">{$OVERVIEW_HEADING_HOSTS}</a>{$SORT_IMAGE_HOST}</td>
-<td nowrap="nowrap"><a href="{$LINK_SORT_SERVICEGROUPS}" class="header_link">{$OVERVIEW_HEADING_SERVICEGROUPS}</a>{$SORT_IMAGE_SERVICE}</td>
 <td nowrap="nowrap"><a href="{$LINK_SORT_SERVICE}" class="header_link">{$OVERVIEW_HEADING_SERVICES}</a>{$SORT_IMAGE_SERVICE}</td>
 <td nowrap="nowrap"><a href="{$LINK_SORT_OWNER}" class="header_link">{$OVERVIEW_HEADING_OWNER}</a>{$SORT_IMAGE_OWNER}</td>
 <td nowrap="nowrap">{$OVERVIEW_HEADING_NOTIFY_ON}</td>
