@@ -5,9 +5,9 @@
 <img src="{$OVERVIEW_EDIT_ENTRY_IMG}" border="0" {$OVERVIEW_EDIT_ENTRY_JS}alt="{$OVERVIEW_EDIT_ENTRY_ALT_TOOLTIP}" title="{$OVERVIEW_EDIT_ENTRY_ALT_TOOLTIP}"/>
 <img src="{$OVERVIEW_DELETE_ENTRY_IMG}" border="0" {$OVERVIEW_DELETE_ENTRY_JS}alt="{$OVERVIEW_DELETE_ENTRY_ALT_TOOLTIP}" title="{$OVERVIEW_DELETE_ENTRY_ALT_TOOLTIP}"/>
 </td>
+<td nowrap="nowrap"{$SERVICEGROUPS_MOUSEOVER}>{$SERVICEGROUPS}</td>
 <td nowrap="nowrap"{$HOSTGROUPS_MOUSEOVER}>{$HOSTGROUPS}</td>
 <td nowrap="nowrap"{$HOSTS_MOUSEOVER}>{$HOSTS}</td>
-<td nowrap="nowrap"{$SERVICEGROUPS_MOUSEOVER}>{$SERVICEGROUPS}</td>
 <td nowrap="nowrap"{$SERVICES_MOUSEOVER}>{$SERVICES}</td>
 <td onmouseover="showLong('{$FULL_NAME}')" onmouseout="hideLong()">{$OWNER}</td>
 <td>{$NOTIFY_ON}</td>
